--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-2 image-container">
           <div class="image-wrapper">
-            <img class='pure-img' src="images/crab.jpg">
+            <img class='pure-img' src="images/crabmo.png">
             <p class='diameter-id'></p>
             <p class='depth-id'></p>
           </div>
