Added the final level

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                      <legend  id="level1tab" >Larva</legend>
                      <legend  id="level2tab" >Peeler</legend>
                      <legend  id="level3tab" >Jimmy Crab</legend>
+                     <legend  id="level3tab" >Dinner</legend>					 
 					 <div id="gameplay1"> </div>
                     <div class="pure-control-group">
                       <label class='Level1' id="diameter" for="diameter">Diameter (in)</label>
@@ -71,7 +72,11 @@
                       <label class='Level3' id="proportionY" for="holeHeight">Hole Height (in)</label>
                       <input class='Level3' id="holeHeight" type="number" step="any" data-parsley-required="true"  placeholder="1" data-parsley-max="8" data-parsley-min="0.001" ></span>
                     </div>
-                    
+ 				    <div id="gameplay4"> </div>	 
+					<div class="pure-control-group"> 
+                      <label class='Level4' id="pocketing" for="check-pocket">Use pocketing to remove the center of the hole?</label>
+                      <input class='Level4'  type="Checkbox" id="check-pocket"  placeholder="Has Arm">
+                    </div>					
 
                     <button  id="submit" type='submit'>Next</button>
                   </fieldset>
