modified size of modal box and text

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                       <input class='Level4'  type="Checkbox" id="check-pocket"  placeholder="Has Arm">
                     </div>					
 <br><br>
-                    <button  id="submit" type='submit'>Done</button>
+                    <button  id="submit" type='submit'>Next Level</button>
                   </fieldset>
                 </form>
              
@@ -98,7 +98,7 @@
   
 
 <script src="js/lib/jquery.min.js"></script>
-<script src="js/lib/jquery.mobile-1.4.5.min.js></script>
+<script src="js/lib/fabmo.js"></script>
 <script type="text/javascript">
     var fabmo = new FabMoDashboard();
 </script>
