more fiddling with layout, etc

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-    <title>HoleCutter</title>
+    <title>Angry Crabs</title>
     <link href="css/pure-min.css" rel="stylesheet">
      <link href="css/forms-min.css" rel="stylesheet">
     <link href="css/grids-responsive-min.css" rel="stylesheet">
