Made it actually cut a hole!
It's still stupid, but not quite as stupid as it was!

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
 					
 					<div id="gameplay2"> </div>
-					<div class="pure-control-group">
+					<div class="pure-control-group"
                         <label class='Level2' for="bit-diameter">Bit Diameter (in)</label>
                         <select class='Level2' id="bit-diameter"  data-parsley-required="true"  placeholder="Bit Diameter"   data-parsley-trigger = "change" >
                           <option value = "0.0625"> 1/16"</option>
@@ -79,7 +79,7 @@
                       <input class='Level4'  type="Checkbox" id="check-pocket"  placeholder="Has Arm">
                     </div>					
 <br><br>
-                    <button  id="submit" type='submit'>Next Level</button>
+                    <button  id="submit" type='submit'>Submit job</button>
                   </fieldset>
                 </form>
              
